--- a/package.json
+++ b/package.json
@@ -13,15 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
-    "sqlite3": "^5.1.6",
-    "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^16.3.1",
-    "axios": "^1.5.0",
-    "helmet": "^7.0.0",
-    "express-rate-limit": "^6.10.0"
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
