--- a/package.json
+++ b/package.json
@@ -8,14 +8,24 @@
     "dev": "nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["health", "ai", "nutrition", "analysis"],
+  "keywords": [
+    "health",
+    "ai",
+    "nutrition",
+    "analysis"
+  ],
   "author": "NutriAI Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.7",
-    "multer": "^1.4.5-lts.1"
+    "sharp": "^0.34.3",
+    "sqlite3": "^5.1.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
