--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "NutriAI Team",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^4.18.2",
